follow the master

--- a/empresa.html
+++ b/empresa.html
@@ -90,81 +90,30 @@
 
   </header>
   
-  <div class="site-showcase">
-  <div class="parallax page-header" style="background-image:url(images/artolexnoite.jpg);">
-  		<div class="container">
-        	<div class="row">
-            	<div class="col-md-12">
-  					<h1>Sobre Nós</h1>
-        		</div>
-           </div>
-       </div>
-  </div>
-  </div>
+  
   <div class="main" role="main">
       <div id="content" class="content full">
         	<div class="container">
           		<div class="page">
         			<div class="row">
-              			<div class="col-md-6 col-sm-6">
+              			<div class="col-md-12">
                 			<h3>Administração e corretagem de imóveis</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper.</p>
             			</div>
-                     	<div class="col-md-6 col-sm-6">
-                			<h3>Nossos diferenciais</h3>
-                          <div class="accordion" id="accordionArea">
-                            <div class="accordion-group panel">
-                              <div class="accordion-heading accordionize"> <a class="accordion-toggle active" data-toggle="collapse" data-parent="#accordionArea" href="#oneArea"> 20 anos de experiência <i class="fa fa-angle-down"></i> </a> </div>
-                              <div id="oneArea" class="accordion-body in collapse">
-                                <div class="accordion-inner"> Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper..</div>
-                              </div>
-                            </div>
-                            <div class="accordion-group panel">
-                              <div class="accordion-heading accordionize"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordionArea" href="#twoArea"> Os melhores imóveis da região <i class="fa fa-angle-down"></i> </a> </div>
-                              <div id="twoArea" class="accordion-body collapse">
-                                <div class="accordion-inner"> Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper..</div>
-                              </div>
-                            </div>
-                            <div class="accordion-group panel">
-                              <div class="accordion-heading accordionize"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordionArea" href="#threeArea"> Administração e corretagem <i class="fa fa-angle-down"></i> </a> </div>
-                              <div id="threeArea" class="accordion-body collapse">
-                                <div class="accordion-inner"> Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper..</div>
-                              </div>
-                            </div>
-                          </div>
+
+                     	<div class="col-md-12 col-sm-6">
+
+<div class="jumbotron">
+  <h2>Nossos diferenciais</h2>
+  <p><div class="alert alert-info" role="alert">20 anos de experiência</div></p>
+  <p><div class="alert alert-info" role="alert">Os melhores imóveis da região</div></p>
+  <p><div class="alert alert-info" role="alert">Administração e corretagem</div></p>
+  
+</div>
                      	</div>
           			</div>
-                  <div class="row">
-                  	<div class="col-md-12">
-                          <div class="block-heading">
-                              <h4><span class="heading-icon"><i class="fa fa-question"></i></span>Perguntas e Respostas</h4>
-                          </div>
-                          <div class="accordion" id="toggleArea">
-                            <div class="accordion-group panel">
-                              <div class="accordion-heading togglize"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#" href="#collapseOne"> Tenho imóveis para administrar. Como posso contratar os serviços da Artolex? <i class="fa fa-plus-circle"></i> <i class="fa fa-minus-circle"></i> </a> </div>
-                              <div id="collapseOne" class="accordion-body collapse">
-                                <div class="accordion-inner"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper.
-                                orem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper. </div>
-                              </div>
-                            </div>
-                            <div class="accordion-group panel">
-                              <div class="accordion-heading togglize"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#" href="#collapseTwo"> Que documentos são necessários para alugar um imóvel? <i class="fa fa-plus-circle"></i> <i class="fa fa-minus-circle"></i> </a> </div>
-                              <div id="collapseTwo" class="accordion-body collapse">
-                                <div class="accordion-inner"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper.
-                                orem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper. </div>
-                              </div>
-                            </div>
-                            <div class="accordion-group">
-                              <div class="accordion-heading togglize"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#" href="#collapseThird"> Quais são as exigências para locação de um imóvel comercial? <i class="fa fa-plus-circle"></i> <i class="fa fa-minus-circle"></i> </a> </div>
-                              <div id="collapseThird" class="accordion-body collapse">
-                                <div class="accordion-inner"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper.
-                                orem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod sollicitudin nunc, eget pretium massa. Ut sed adipiscing enim, pellentesque ultrices erat. Integer placerat felis neque, et semper augue ullamcorper in. Pellentesque iaculis leo iaculis aliquet ultrices. Suspendisse potenti. Aenean ac magna faucibus, consectetur ligula vel, feugiat est. Nullam imperdiet semper neque eget euismod. Nunc commodo volutpat semper. </div>
-                              </div>
-                            </div>
-                          </div>
-                    	</div>
-                  </div>
+                 
         		</div>
       		</div>
     	</div>
