Versão final por mim

--- a/contato.html
+++ b/contato.html
@@ -89,7 +89,69 @@
     </div>
 
   </header>
-  
+ 
+  <!-- Start Content -->
+  <div class="main" role="main">
+    <div id="content" class="content full">
+      <div class="container">
+        <div class="page">
+          <div class="row">
+            <div class="col-md-12 col-sm-8">
+              <h3>Entre em Contato</h3>
+              <div class="row">
+                <form method="post" id="contactform" name="contactform" class="contact-form" action="">
+                  <div class="col-md-10 margin-15">
+                    <div class="form-group">
+                          <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                            <input type="text" class="form-control input-lg" placeholder="Usuário">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                     <div class="form-group">
+                          <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <input type="text" class="form-control input-lg" placeholder="Email">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="form-group">
+                          <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-phone"></i></span>
+                            <input type="text" class="form-control input-lg" placeholder="Telefone">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <textarea cols="10" rows="5" id="comments" name="comments" class="form-control input-lg" placeholder="Mensagem"></textarea>
+                      <input id="submit" name="submit" type="button" class="btn btn-primary btn-lg btn-block" value="Enviar">
+                      <p style="float:right;">Nosso email é <a href="mailto:contato@artolex.com.br"><strong>contato@artolex.com.br</strong></a> ou entre em contato no <strong>+55 (32) 3531-7544</strong></p>
+                    </div>
+
+                  </div>
+                   <div class="container">
+          <div class="row">
+                   <div class="col-md-12 col-sm-10">
+              <div class="lgray-bg">
+                    <p class="big">Avenida Beira Rio, 500
+                     | Centro
+                    -  Ubá - Minas Gerais</p>
+              </div>
+            </div>
+            </div>
+            </div>
+                </form>
+              </div>
+              <div class="clearfix"></div>
+              <div id="message"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+ 
   <div class="site-showcase"> 
     <!-- Start Page Header -->
     <div class="parallax page-header" id="contact-map">
@@ -97,53 +159,6 @@
     </div>
     <!-- End Page Header --> 
   </div>
-  <!-- Start Content -->
-  <div class="main" role="main">
-    <div id="content" class="content full">
-      <div class="container">
-        <div class="page">
-          <div class="row">
-            <div class="col-md-6 col-sm-6">
-              <h3>Entre em Contato</h3>
-              <div class="row">
-                <form method="post" id="contactform" name="contactform" class="contact-form" action="">
-                  <div class="col-md-6 margin-15">
-                    <div class="form-group">
-                      <input type="text" id="name" name="name"  class="form-control input-lg" placeholder="Nome*">
-                    </div>
-                    <div class="form-group">
-                      <input type="email" id="email" name="email"  class="form-control input-lg" placeholder="Email*">
-                    </div>
-                    <div class="form-group">
-                      <input type="text" id="phone" name="phone" class="form-control input-lg" placeholder="Telefone">
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <textarea cols="6" rows="5" id="comments" name="comments" class="form-control input-lg" placeholder="Mensagem"></textarea>
-                      <input id="submit" name="submit" type="button" class="btn btn-primary btn-lg btn-block" value="Enviar">
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="clearfix"></div>
-              <div id="message"></div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-            	<h3>Nosso Endereço</h3>
-              <div class="padding-as25 lgray-bg">
-                    <p class="big">Avenida Beira Rio, 500<br>
-                     Centro<br>
-                     Ubá - Minas Gerais</p>
-                  <p>Nosso email é <a href="mailto:contato@artolex.com.br"><strong>contato@artolex.com.br</strong></a> ou entre em contato no <strong>+55 (32) 3531-7544</strong></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <footer class="site-footer">
     <div class="container">
       <div class="row">
