--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                  <a href="propriedades-detalhes.html" class="btn btn-primary btn-block">Conheça</a>
                  <!-- <div class="hero-agent">
                       <img src="images/aartolex.jpg" alt="" class="hero-agent-pic">
-                      <a href="detalhes-agente.html" class="hero-agent-contact" data-placement="left"  data-toggle="tooltip" title="" data-original-title="Fale com a Artolex!"><i class="fa fa-envelope"></i></a>
+                      <a href="#" class="hero-agent-contact" data-placement="left"  data-toggle="tooltip" title="" data-original-title="Fale com a Artolex!"><i class="fa fa-envelope"></i></a>
                  </div> -->
               </div>
             </div>
@@ -121,7 +121,7 @@
                 <a href="propriedades-detalhes.html" class="btn btn-primary btn-block">Conheça</a>
                <!-- <div class="hero-agent">
                     <img src="images/aartolex.jpg" alt="" class="hero-agent-pic">
-                    <a href="detalhes-agente.html" class="hero-agent-contact" data-placement="left"  data-toggle="tooltip" title="" data-original-title="Fale com a Artolex!"><i class="fa fa-envelope"></i></a>
+                    <a href="#" class="hero-agent-contact" data-placement="left"  data-toggle="tooltip" title="" data-original-title="Fale com a Artolex!"><i class="fa fa-envelope"></i></a>
                 </div>
             </div> -->
               </div>
@@ -494,7 +494,7 @@
               <div class="row">
                   <div class="col-md8 col-sm-8 popular-agent column">
                       <h3>Serviço de Terraplenagem</h3>
-                    <a href="detalhes-agente.html"><img src="images/terraplanagem.jpg" alt="" class="img-thumbnail"></a> 
+                    <a href="#"><img src="images/terraplanagem.jpg" alt="" class="img-thumbnail"></a> 
                 </div>
 
                   <div class="col-md-4 col-sm-4 latest-testimonials column">
@@ -505,7 +505,7 @@
                               Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
                               Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
                               Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-                              <a href="detalhes-agente.html" class="btn btn-lg btn-primary col-md-12">mais informações</a>
+                              <a href="#" class="btn btn-lg btn-primary col-md-12">mais informações</a>
                               <br />
                               <br />
                         </li>
