--- a/login.html
+++ b/login.html
@@ -89,9 +89,8 @@
     </div>
 
   </header>
-  
+
   <div class="site-showcase">
-  <div class="parallax page-header" style="background-image:url(images/slider-topo.jpg);">
   		<div class="container">
         	<div class="row">
             	<div class="col-md-12">
@@ -100,14 +99,13 @@
            </div>
        </div>
   </div>
-  </div>
   <div class="main" role="main">
       <div id="content" class="content full">
         	<div class="container">
           		<div class="page">
         			<div class="row">
-              			<div class="col-md-4 col-sm-4">
-            				<div class="alert alert-default fade in">
+              			<div class="col-md-12 alert alert-info">
+            				<div class="fade in">
             					<h4>Nossa transparência é a sua segurança</h4>
 								<p>Se você é proprietário de imóveis, pode acompanhar por aqui a situação dos imóveis de sua propriedade. Através desta área você confere quais imóveis estão alugados e pode visualizar em um único lugar todos os seus imóveis administrados pela Artolex. </p>
 								<p>Se você já é nosso clientenão lembra os seus dados de acesso, entre em contato conosco para que possamos lhe informar.</p>
@@ -115,46 +113,54 @@
 								<p>É a transparência da nossa empresa em prol da sua tranquilidade e segurança.</p>
                           </div>
             			</div>
-              			<div class="col-md-4 col-sm-4 login-form">
+              			<div class="col-md-8 col-sm-8 login-form">
                         	<h3>Entrar</h3>
                         	<form>
                         		<div class="input-group">
   									<span class="input-group-addon"><i class="fa fa-user"></i></span>
-  									<input type="text" class="form-control" placeholder="Usuário">
+  									<input type="text" class="form-control input-lg" placeholder="Usuário">
 								</div>
                              <br>
                         		<div class="input-group">
   									<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-  									<input type="password" class="form-control" placeholder="Senha">
+  									<input type="password" class="form-control input-lg" placeholder="Senha">
 								</div>
-                             <div class="checkbox">
-                             	<input type="checkbox"> Manter Conectado
-                             </div>
+                <br />
                              <button type="submit" class="btn btn-primary">Entrar</button>
                      		</form>
             			</div>
-              			<div class="col-md-4 col-sm-4 register-form">
-                        	<h3>Solicitar contato</h3>
+              			<div class="col-md-8 col-sm-8 register-form">
+                        	<h3>Cadastrar</h3>
                         	<form>
                         		<div class="input-group">
   									<span class="input-group-addon"><i class="fa fa-user"></i></span>
-  									<input type="text" class="form-control" placeholder="Nome">
+  									<input type="text" class="form-control input-lg" placeholder="Nome">
 								</div>
                              <br>
                         		<div class="input-group">
   									<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-  									<input type="email" class="form-control" placeholder="Email">
+  									<input type="email" class="form-control input-lg" placeholder="Email">
 								</div>
                              <br>
                         		<div class="input-group">
-  									<span class="input-group-addon"><i class="fa fa-phone"></i></span>
-  									<input type="phone" class="form-control" placeholder="Telefone 1">
+  									<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+  									<input type="phone" class="form-control input-lg" placeholder="Senha">
 								</div>
+                <br>
+                            <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                    <input type="phone" class="form-control input-lg" placeholder="Confirmar Senha">
+                </div>
                              <br>
                         		<div class="input-group">
   									<span class="input-group-addon"><i class="fa fa-phone"></i></span>
-  									<input type="phone" class="form-control" placeholder="Telefone 2">
+  									<input type="phone" class="form-control input-lg" placeholder="Telefone 1">
 								</div>
+                 <br>
+                            <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-phone"></i></span>
+                    <input type="phone" class="form-control input-lg" placeholder="Telefone 2">
+                </div>
                              <br>
                              <button type="submit" class="btn btn-primary">Cadastrar</button>
                      		</form>
