--- a/minhas-propriedades.html
+++ b/minhas-propriedades.html
@@ -92,7 +92,6 @@
   
   <div class="site-showcase">
   <!-- Start Page Header -->
-  <div class="parallax page-header" style="background-image:url(images/slider-topo.jpg);">
   		<div class="container">
         	<div class="row">
             	<div class="col-md-12">
@@ -101,19 +100,14 @@
            </div>
        </div>
   </div>
-  </div>
   <div class="main" role="main">
       <div id="content" class="content full">
         	<div class="container">
           		<div class="page">
         			<div class="row">
               			<div class="col-md-12">
-                  		<div class="block-heading" id="details">
-                     			<a href="#additionalinfo" class="btn btn-sm btn-primary pull-right">Adicionar novo imóvel <i class="fa fa-long-arrow-right"></i></a>
-                         		<h4><span class="heading-icon"><i class="fa fa-home"></i></span>Lista de imóveis</h4>
-                     		</div>
         					<div class="properties-table">
-                            <table class="table table-striped">
+                            <table class="table table-bordered">
                                 <thead>
                                     <tr>
                                         <th>Lorem ip</th>
@@ -131,12 +125,24 @@
                                         </td>
                                         <td><a href="propriedades-detalhes.html">Rua XX - Bairro Y, 485</a></td>
                                         <td>lorem ipsum</td>
-                                        <td>Aluguel</td>
-                                        <td><div class="price"><strong>R$</strong><span>2800 Mensais</span></div></td>
                                         <td>
-                                            <a href="#" class="action-button"><i class="fa fa-pencil"></i> <span>Editar</span></a>
-                                            <a href="propriedades-detalhes.html" class="action-button"><i class="fa fa-eye"></i> <span>Ver</span></a>
-                                            <a href="#" class="action-button"><i class="fa fa-ban"></i> <span>Deletar</span></a>
+                                          <span class="label label-info col-md-12">ALUGUEL</span>
+                                        </td>
+                                        <td>
+                                          <span class="label label-success col-md-12">R$ 1.500</span>
+                                        </td>
+                                        <td>
+                                        <div class="dropdown">
+                                          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                                           Ações
+                                            <span class="caret"></span>
+                                          </button>
+                                          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-pencil"></i> <span>Editar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-ban"></i> <span>Deletar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-eye"></i> <span>Ver</span></a></li>
+                                          </ul>
+                                        </div>
                                         </td>
                                     </tr>
 <tr>
@@ -145,12 +151,20 @@
                                         </td>
                                         <td><a href="propriedades-detalhes.html">Rua XX - Bairro Y, 485</a></td>
                                         <td>lorem ipsum</td>
-                                        <td>Aluguel</td>
-                                        <td><div class="price"><strong>R$</strong><span>2800 Mensais</span></div></td>
+                                        <td><span class="label label-info col-md-12">ALUGUEL</span></td>
+                                        <td><span class="label label-success col-md-12">R$ 1.500</span></td>
                                         <td>
-                                            <a href="#" class="action-button"><i class="fa fa-pencil"></i> <span>Editar</span></a>
-                                            <a href="propriedades-detalhes.html" class="action-button"><i class="fa fa-eye"></i> <span>Ver</span></a>
-                                            <a href="#" class="action-button"><i class="fa fa-ban"></i> <span>Deletar</span></a>
+                                            <div class="dropdown">
+                                          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                                           Ações
+                                            <span class="caret"></span>
+                                          </button>
+                                          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-pencil"></i> <span>Editar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-ban"></i> <span>Deletar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-eye"></i> <span>Ver</span></a></li>
+                                          </ul>
+                                        </div>
                                         </td>
                                     </tr>
                                     <tr>
@@ -159,12 +173,20 @@
                                         </td>
                                         <td><a href="propriedades-detalhes.html">Rua XX - Bairro Y, 485</a></td>
                                         <td>lorem ipsum</td>
-                                        <td>Aluguel</td>
-                                        <td><div class="price"><strong>R$</strong><span>2800 Mensais</span></div></td>
+                                        <td><span class="label label-info col-md-12">ALUGUEL</span></td>
+                                        <td><span class="label label-success col-md-12">R$ 1.500</span></td>
                                         <td>
-                                            <a href="#" class="action-button"><i class="fa fa-pencil"></i> <span>Editar</span></a>
-                                            <a href="propriedades-detalhes.html" class="action-button"><i class="fa fa-eye"></i> <span>Ver</span></a>
-                                            <a href="#" class="action-button"><i class="fa fa-ban"></i> <span>Deletar</span></a>
+                                            <div class="dropdown">
+                                          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                                           Ações
+                                            <span class="caret"></span>
+                                          </button>
+                                          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-pencil"></i> <span>Editar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-ban"></i> <span>Deletar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-eye"></i> <span>Ver</span></a></li>
+                                          </ul>
+                                        </div>
                                         </td>
                                     </tr>
                                     <tr>
@@ -173,18 +195,27 @@
                                         </td>
                                         <td><a href="propriedades-detalhes.html">Rua XX - Bairro Y, 485</a></td>
                                         <td>lorem ipsum</td>
-                                        <td>Aluguel</td>
-                                        <td><div class="price"><strong>R$</strong><span>2800 Mensais</span></div></td>
+                                        <td><span class="label label-info col-md-12">ALUGUEL</span></td>
+                                        <td><span class="label label-success col-md-12">R$ 1.500</span></td>
                                         <td>
-                                            <a href="#" class="action-button"><i class="fa fa-pencil"></i> <span>Editar</span></a>
-                                            <a href="propriedades-detalhes.html" class="action-button"><i class="fa fa-eye"></i> <span>Ver</span></a>
-                                            <a href="#" class="action-button"><i class="fa fa-ban"></i> <span>Deletar</span></a>
+                                            <div class="dropdown">
+                                          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                                           Ações
+                                            <span class="caret"></span>
+                                          </button>
+                                          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-pencil"></i> <span>Editar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-ban"></i> <span>Deletar</span></a></li>
+                                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-eye"></i> <span>Ver</span></a></li>
+                                          </ul>
+                                        </div>
                                         </td>
                                     </tr>
 
                                    
                                 </tbody>
                              </table>
+                             <a href="#additionalinfo" style="width: 100%;" class="btn btn-primary">Adicionar novo imóvel</a>
                           </div>
                           <div class="text-align-center">
                               <ul class="pagination">
@@ -205,7 +236,7 @@
   </div>
   
   
-  
+
   <footer class="site-footer">
     <div class="container">
       <div class="row">
