--- a/propriedades-simples-list.html
+++ b/propriedades-simples-list.html
@@ -96,12 +96,19 @@
               <div class="row">
                   <div class="col-md-12">
                       <div class="block-heading">
-                          <h4>   Lista de imóveis</h4>
+
+            <div class="bs-callout bs-callout-info" id="callout-alerts-no-default">
+    <h4 id="no-default-class"><i class="fa fa-columns"></i> Lista de imóveis</h4>
+  
+                          
                           <div class="toggle-view pull-right">
                               <a href="propriedades-simples-coluna.html"><i class="fa fa-th-large"></i></a>
                               <a href="javacsript:void(0);" class="active"><i class="fa fa-th-list"></i></a>
                           </div>
+                          </div>    
                       </div>
+                      <br />
+                      <br />
                     <div class="property-listing">
                         <ul>
                           <li class="well well-lg col-md-12">
